// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/badge/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "1": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>,
  "2": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <span
      aria-label="clock-circle"
      class="anticon anticon-clock-circle dcloud-scroll-number-custom-component"
      role="img"
      style="color:#f5222d"
    >
      <svg
        aria-hidden="true"
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </span>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/change.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "1": <div
    class="dcloud-btn-group"
  >
    <button
      class="dcloud-btn"
      type="button"
    >
      <span
        aria-label="minus"
        class="anticon anticon-minus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="minus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </button>
    <button
      class="dcloud-btn"
      type="button"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <defs>
            <style />
          </defs>
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
    </button>
    <button
      class="dcloud-btn"
      type="button"
    >
      <span
        aria-label="question"
        class="anticon anticon-question"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="question"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M764 280.9c-14-30.6-33.9-58.1-59.3-81.6C653.1 151.4 584.6 125 512 125s-141.1 26.4-192.7 74.2c-25.4 23.6-45.3 51-59.3 81.7-14.6 32-22 65.9-22 100.9v27c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-27c0-99.5 88.6-180.4 197.6-180.4s197.6 80.9 197.6 180.4c0 40.8-14.5 79.2-42 111.2-27.2 31.7-65.6 54.4-108.1 64-24.3 5.5-46.2 19.2-61.7 38.8a110.85 110.85 0 00-23.9 68.6v31.4c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-31.4c0-15.7 10.9-29.5 26-32.9 58.4-13.2 111.4-44.7 149.3-88.7 19.1-22.3 34-47.1 44.3-74 10.7-27.9 16.1-57.2 16.1-87 0-35-7.4-69-22-100.9zM512 787c-30.9 0-56 25.1-56 56s25.1 56 56 56 56-25.1 56-56-25.1-56-56-56z"
          />
        </svg>
      </span>
    </button>
  </div>,
  "2": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "3": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot"
      data-show="true"
    />
  </span>,
  "4": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 5,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/colorful.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-divider dcloud-divider-horizontal dcloud-divider-with-text dcloud-divider-with-text-left"
    role="separator"
  >
    <span
      class="dcloud-divider-inner-text"
    >
      Presets
    </span>
  </div>,
  "1": <div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-pink"
        />
        <span
          class="dcloud-badge-status-text"
        >
          pink
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-red"
        />
        <span
          class="dcloud-badge-status-text"
        >
          red
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-yellow"
        />
        <span
          class="dcloud-badge-status-text"
        >
          yellow
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-orange"
        />
        <span
          class="dcloud-badge-status-text"
        >
          orange
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-cyan"
        />
        <span
          class="dcloud-badge-status-text"
        >
          cyan
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-green"
        />
        <span
          class="dcloud-badge-status-text"
        >
          green
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-blue"
        />
        <span
          class="dcloud-badge-status-text"
        >
          blue
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-purple"
        />
        <span
          class="dcloud-badge-status-text"
        >
          purple
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-geekblue"
        />
        <span
          class="dcloud-badge-status-text"
        >
          geekblue
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-magenta"
        />
        <span
          class="dcloud-badge-status-text"
        >
          magenta
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-volcano"
        />
        <span
          class="dcloud-badge-status-text"
        >
          volcano
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-gold"
        />
        <span
          class="dcloud-badge-status-text"
        >
          gold
        </span>
      </span>
    </div>
    <div>
      <span
        class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
      >
        <span
          class="dcloud-badge-status-dot dcloud-badge-status-lime"
        />
        <span
          class="dcloud-badge-status-text"
        >
          lime
        </span>
      </span>
    </div>
  </div>,
  "2": <div
    class="dcloud-divider dcloud-divider-horizontal dcloud-divider-with-text dcloud-divider-with-text-left"
    role="separator"
  >
    <span
      class="dcloud-divider-inner-text"
    >
      Custom
    </span>
  </div>,
  "3": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot"
      style="background:#f50"
    />
    <span
      class="dcloud-badge-status-text"
    >
      #f50
    </span>
  </span>,
  "4": <br />,
  "5": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot"
      style="background:#2db7f5"
    />
    <span
      class="dcloud-badge-status-text"
    >
      #2db7f5
    </span>
  </span>,
  "6": <br />,
  "7": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot"
      style="background:#87d068"
    />
    <span
      class="dcloud-badge-status-text"
    >
      #87d068
    </span>
  </span>,
  "8": <br />,
  "9": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot"
      style="background:#108ee9"
    />
    <span
      class="dcloud-badge-status-text"
    >
      #108ee9
    </span>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 10,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/dot.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      aria-label="notification"
      class="anticon anticon-notification"
      role="img"
      style="font-size:16px"
    >
      <svg
        aria-hidden="true"
        data-icon="notification"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.7c-3.7 11.6-5.7 23.9-5.7 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1zm496 58.4L318.8 611.3l-12.9-5.2H184V417.9h121.9l12.9-5.2L840 203.3v617.4z"
        />
      </svg>
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot"
      data-show="true"
    />
  </span>,
  "1": <span
    class="dcloud-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot"
      data-show="true"
    />
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/link.md correctly 1`] = `
LoadedCheerio {
  "0": <a
    href="#"
  >
    <span
      class="dcloud-badge"
    >
      <span
        class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
      >
        <span
          class="dcloud-avatar-string"
          style="opacity:0"
        />
      </span>
      <sup
        class="dcloud-scroll-number dcloud-badge-count"
        data-show="true"
        title="5"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition:none"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </sup>
    </span>
  </a>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/mix.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-status-success"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "1": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-status-warning"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "2": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-status-blue"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "3": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      style="background:#fa541c"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "4": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot dcloud-badge-status-success"
      data-show="true"
    />
  </span>,
  "5": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot dcloud-badge-status-warning"
      data-show="true"
    />
  </span>,
  "6": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot dcloud-badge-status-blue"
      data-show="true"
    />
  </span>,
  "7": <span
    class="dcloud-badge dcloud-badge-status"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-dot"
      data-show="true"
      style="background:#fa541c"
    />
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 8,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/no-wrapper.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        aria-checked="true"
        class="dcloud-switch dcloud-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <span
        class="dcloud-badge dcloud-badge-not-a-wrapper"
      >
        <sup
          class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
          data-show="true"
          title="25"
        >
          <span
            class="dcloud-scroll-number-only"
            style="transition:none"
          >
            <span
              class="dcloud-scroll-number-only-unit current"
            >
              2
            </span>
          </span>
          <span
            class="dcloud-scroll-number-only"
            style="transition:none"
          >
            <span
              class="dcloud-scroll-number-only-unit current"
            >
              5
            </span>
          </span>
        </sup>
      </span>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <span
        class="dcloud-badge dcloud-badge-not-a-wrapper"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle dcloud-scroll-number-custom-component"
          role="img"
          style="color:#f5222d"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="dcloud-space-item"
    >
      <span
        class="dcloud-badge dcloud-badge-not-a-wrapper site-badge-count-109"
      >
        <sup
          class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
          data-show="true"
          style="background-color:#52c41a"
          title="109"
        >
          99+
        </sup>
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/offset.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      style="margin-top:10px;right:-10px"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/overflow.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="99"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          9
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          9
        </span>
      </span>
    </sup>
  </span>,
  "1": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="100"
    >
      99+
    </sup>
  </span>,
  "2": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="99"
    >
      10+
    </sup>
  </span>,
  "3": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="1000"
    >
      999+
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/ribbbon.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "1": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-pink"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "2": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-red"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "3": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-cyan"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "4": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-green"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "5": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-purple"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "6": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-volcano"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "7": <div
    class="dcloud-ribbon-wrapper"
  >
    <div
      class="dcloud-card dcloud-card-bordered dcloud-card-small"
    >
      <div
        class="dcloud-card-head"
      >
        <div
          class="dcloud-card-head-wrapper"
        >
          <div
            class="dcloud-card-head-title"
          >
            Pushes open the window
          </div>
        </div>
      </div>
      <div
        class="dcloud-card-body"
      >
        and raises the spyglass.
      </div>
    </div>
    <div
      class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-magenta"
    >
      <span
        class="dcloud-ribbon-text"
      >
        Hippies
      </span>
      <div
        class="dcloud-ribbon-corner"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 8,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/ribbon-debug.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-vertical"
    style="width:100%"
  >
    <div
      class="dcloud-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="dcloud-ribbon-wrapper"
      >
        <div
          class="dcloud-card dcloud-card-bordered"
        >
          <div
            class="dcloud-card-body"
          >
            推开窗户举起望远镜
          </div>
        </div>
        <div
          class="dcloud-ribbon dcloud-ribbon-placement-end"
        >
          <span
            class="dcloud-ribbon-text"
          >
            啦啦啦啦
          </span>
          <div
            class="dcloud-ribbon-corner"
          />
        </div>
      </div>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="dcloud-ribbon-wrapper"
      >
        <div
          class="dcloud-card dcloud-card-bordered"
        >
          <div
            class="dcloud-card-body"
          >
            推开窗户举起望远镜
          </div>
        </div>
        <div
          class="dcloud-ribbon dcloud-ribbon-placement-end dcloud-ribbon-color-purple"
        >
          <span
            class="dcloud-ribbon-text"
          >
            啦啦啦啦
          </span>
          <div
            class="dcloud-ribbon-corner"
          />
        </div>
      </div>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="dcloud-ribbon-wrapper"
      >
        <div
          class="dcloud-card dcloud-card-bordered"
        >
          <div
            class="dcloud-card-body"
          >
            推开窗户举起望远镜
          </div>
        </div>
        <div
          class="dcloud-ribbon dcloud-ribbon-placement-end"
          style="background:#2db7f5"
        >
          <span
            class="dcloud-ribbon-text"
          >
            啦啦啦啦
          </span>
          <div
            class="dcloud-ribbon-corner"
            style="color:#2db7f5"
          />
        </div>
      </div>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="dcloud-ribbon-wrapper"
      >
        <div
          class="dcloud-card dcloud-card-bordered"
        >
          <div
            class="dcloud-card-body"
          >
            推开窗户举起望远镜
          </div>
        </div>
        <div
          class="dcloud-ribbon dcloud-ribbon-placement-start"
          style="background:#2db7f5"
        >
          <span
            class="dcloud-ribbon-text"
          >
            啦啦啦啦
          </span>
          <div
            class="dcloud-ribbon-corner"
            style="color:#2db7f5"
          />
        </div>
      </div>
    </div>
    <div
      class="dcloud-space-item"
    >
      <div
        class="dcloud-ribbon-wrapper"
      >
        <div
          class="dcloud-card dcloud-card-bordered"
        >
          <div
            class="dcloud-card-body"
          >
            推开窗户举起望远镜
          </div>
        </div>
        <div
          class="dcloud-ribbon dcloud-ribbon-placement-end"
          style="background:#2db7f5"
        >
          <span
            class="dcloud-ribbon-text"
          >
            啦啦啦啦
          </span>
          <div
            class="dcloud-ribbon-corner"
            style="color:#2db7f5"
          />
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "1": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-count-sm"
      data-show="true"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/status.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-success"
    />
    <span
      class="dcloud-badge-status-text"
    />
  </span>,
  "1": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-error"
    />
    <span
      class="dcloud-badge-status-text"
    />
  </span>,
  "10": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-default"
    />
    <span
      class="dcloud-badge-status-text"
    >
      Default
    </span>
  </span>,
  "11": <br />,
  "12": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-processing"
    />
    <span
      class="dcloud-badge-status-text"
    >
      Processing
    </span>
  </span>,
  "13": <br />,
  "14": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-warning"
    />
    <span
      class="dcloud-badge-status-text"
    >
      Warning
    </span>
  </span>,
  "2": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-default"
    />
    <span
      class="dcloud-badge-status-text"
    />
  </span>,
  "3": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-processing"
    />
    <span
      class="dcloud-badge-status-text"
    />
  </span>,
  "4": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-warning"
    />
    <span
      class="dcloud-badge-status-text"
    />
  </span>,
  "5": <br />,
  "6": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-success"
    />
    <span
      class="dcloud-badge-status-text"
    >
      Success
    </span>
  </span>,
  "7": <br />,
  "8": <span
    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
  >
    <span
      class="dcloud-badge-status-dot dcloud-badge-status-error"
    />
    <span
      class="dcloud-badge-status-text"
    >
      Error
    </span>
  </span>,
  "9": <br />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 15,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/badge/demo/title.md correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="Custom hover text"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "1": <span
    class="dcloud-badge"
  >
    <span
      class="dcloud-avatar dcloud-avatar-lg dcloud-avatar-square"
    >
      <span
        class="dcloud-avatar-string"
        style="opacity:0"
      />
    </span>
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="Negative"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          -
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transition:none"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
